force-app/main/default/objects/ChangeCheck__c/ChangeCheck__c.object-meta.xml
<CustomObject>
    <label>入替チェック</label>
    <nameField>
        <displayFormat>CHC-{000000}</displayFormat>
        <label>入替チェック名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>