force-app/main/default/objects/ChangeCheck__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>入替</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipLabel>入替チェック</relationshipLabel>
    <relationshipName>nb57</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>