force-app/main/default/objects/ChangeCheck__c/fields/CheckResult__c.field-meta.xml
<CustomField>
    <fullName>CheckResult__c</fullName>
    <label>チェック結果(システム)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>「OK」</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>目視</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>