force-app/main/default/objects/ChangeCheck__c/fields/CleanChargessOperatorCheck__c.field-meta.xml
<CustomField>
    <fullName>CleanChargessOperatorCheck__c</fullName>
    <label>清掃手配手数料_OPチェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
            <value>
                <fullName>未記載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>