force-app/main/default/objects/ChangeCheck__c/fields/CleaningReformCostReconfirmCheck__c.field-meta.xml
<CustomField>
    <fullName>CleaningReformCostReconfirmCheck__c</fullName>
    <label>リフォーム費用（清掃）_再査チェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
            <value>
                <fullName>未記載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>