force-app/main/default/objects/ChangeCheck__c/fields/Commnet__c.field-meta.xml
<CustomField>
    <fullName>Commnet__c</fullName>
    <label>OPコメント</label>
    <type>TextArea</type>
</CustomField>