force-app/main/default/objects/ChangeCheck__c/fields/SelfPayConsentOperatorCheck__c.field-meta.xml
<CustomField>
    <fullName>SelfPayConsentOperatorCheck__c</fullName>
    <label>個人負担承諾_OPチェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
            <value>
                <fullName>未記載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>